# ELB_V1

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ELB-V1-Tauri-starten.bat  ELB-V1-Vercel-Einrichten.bat  ELB-V1-Vercel-Preview-Deploy.bat  ELB-V1-Vercel-Production-Deploy.bat  ELB-V1-Vite-starten.bat  ELB-V1-Web-Preview-starten.bat  ELB-V1-Web-starten.bat  ELB-V1-starten.bat  EXPORTS.md  MASTER_DATA.md  MIGRATION.md  README.md  SUPABASE-SETUP.md  SYNC_CONTRACT.md  WEB-DEPLOYMENT.md  package-lock.json  package.json  tsconfig.base.json  vercel.json  vitest.config.ts
.github/: WORKFLOW_SETUP.md  commit-template.txt  pull_request_template.md
.github/workflows/: ci.yml
Daten_zip/ELB_V1_Daten/: workspace.json
Daten_zip/ELB_V1_Daten/Stammdaten/: master-data.json
apps/desktop/: index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/web/: .env.example  index.html  package.json  tsconfig.app.json  vercel.json  vite.config.ts
scripts/: check-mojibake.mjs  clean.mjs  run-tauri-dev.mjs
supabase/: config.toml
supabase/migrations/: 20260319_000001_create_elb_storage.sql
tmp_koller/: [Content_Types].xml
tmp_koller/customXml/: itemProps1.xml
tmp_koller/docProps/: app.xml  core.xml
tmp_koller/word/: document.xml  endnotes.xml  fontTable.xml  footnotes.xml  header1.xml  settings.xml  styles.xml  webSettings.xml
vorlagen/: Koller_sl_de.docx  auctions.json  clerks.json  departments.json  titles.json
(+78 files in other folders)
