[package]
name = "elb_v1"
version = "0.1.0"
edition = "2021"
description = "ELB V1 Desktop-App"
license = "Proprietary"
authors = ["Carsten"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
